--- a/index.html
+++ b/index.html
@@ -288,28 +288,30 @@
       </div>
     </section>
 
-    <!-- <section class="reservation">
+    <section class="reservation">
       <div class="container">
         <div class="reservation__inner">
-          <h2 class="title">
-            Успей <br> забронировать
+          <h2 class="title reservation__title">
+            Успей <br> <span>забронировать</span>
           </h2>
-          <div class="reservation__text">
-            <p>
-              Руководство Virgin Galactic надеется, что массовые суборбитальные космические полеты начнутся до 2022
-              года.
-              Компания уже несколько лет продает билеты на такие полеты по 250 тыс долл.
-            </p>
-          </div>
-          <div class="reservation__text reservation__text--mod">
-            <p>Virgin Galactic получила задатков более чем 80 млн долл, а количество желающих превышает 600 человек.
-            </p>
+          <div class="reservation__block">
+            <div class="reservation__text">
+              <p>
+                Руководство Virgin Galactic надеется, что массовые суборбитальные космические полеты начнутся до 2022
+                года.
+                Компания уже несколько лет продает билеты на такие полеты по 250 тыс долл.
+              </p>
+            </div>
+            <div class="reservation__text reservation__text--mod">
+              <p>Virgin Galactic получила задатков более чем 80 млн долл, а количество желающих превышает 600 человек.
+              </p>
+            </div>
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="offer">
+    <section class="offer">
       <div id="price" class="special">
         <div class="special__decor"></div>
         <div class="container">
@@ -355,7 +357,7 @@
         </div>
       </div>
 
-      <div id="services" class="services">
+      <!-- <div id="services" class="services">
         <div class="container">
           <h2 class="title">
             Дополнительные <br> услуги
@@ -388,9 +390,9 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
-      <div class="slider">
+      <!-- <div class="slider">
         <div class="container">
           <div class="slider__inner">
             <div class="slider__box">
@@ -416,8 +418,8 @@
           </p>
         </div>
         <div class="slider__decor"></div>
-      </div>
-    </section> -->
+      </div> -->
+    </section>
 
     <!-- <section id="guarantees" class="contacts">
       <div class="container">
