--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <div class="header__inner">
         <div class="header__top">
           <nav class="menu">
-            <div class="menu-mobile-btn">
+            <button class="menu-mobile-btn">
               <img src="images/earth.png" alt="menu icon">
-            </div>
+            </button>
             <div class="menu-mobile">
             </div>
             <ul class="menu__list" data-da=".menu-mobile,1000,1">
@@ -179,7 +179,7 @@
                 <td aria-label="вернешься?" class="about__table-td">99<span>%</span></td>
               </tr>
             </table>
-            <button class="button" type="submit">Забронировать полет</button>
+            <button class="button">Забронировать полет</button>
           </div>
         </div>
         <div class="about__item">
