--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=\, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=no">
   <title>Space</title>
   <link rel="shortcut icon" href="images/x-icon.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -357,10 +357,10 @@
         </div>
       </div>
 
-      <!-- <div id="services" class="services">
+      <div id="services" class="services">
         <div class="container">
-          <h2 class="title">
-            Дополнительные <br> услуги
+          <h2 class="title services__title">
+            <span>Дополнительные</span> <br> услуги
           </h2>
           <div class="services__inner">
             <div class="services__box">
@@ -390,9 +390,9 @@
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
 
-      <!-- <div class="slider">
+      <div class="slider">
         <div class="container">
           <div class="slider__inner">
             <div class="slider__box">
@@ -418,10 +418,10 @@
           </p>
         </div>
         <div class="slider__decor"></div>
-      </div> -->
+      </div>
     </section>
 
-    <!-- <section id="guarantees" class="contacts">
+    <section id="guarantees" class="contacts">
       <div class="container">
         <div class="contacts__inner">
           <div class="contacts__box">
@@ -432,9 +432,9 @@
               Оставь свои контакты и мы перезвоним тебе в ближайшие 100 лет!
             </p>
             <form class="contacts__form">
-              <input class="contacts__form-input" placeholder="ФИО" type="text">
-              <input class="contacts__form-input" placeholder="Имя ребенка или внука (на всякий случай)" type="text">
-              <input class="contacts__form-input" placeholder="Телефон" type="tel">
+              <input class="contacts__form-input" placeholder="ФИО" type="text" required>
+              <input class="contacts__form-input" placeholder="Имя ребенка или внука (на всякий случай)" type="text" required>
+              <input class="contacts__form-input" placeholder="Телефон" type="tel" required>
               <button class="button" type="submit">Забронировать полет</button>
             </form>
           </div>
@@ -443,19 +443,19 @@
               Гарантии
             </h2>
             <p class="contacts__guarantees-text">
-              Ни одна моя ракета еще не сделала удачную попытку, потому что в ней не было тебя!
-              Будь первым! Колонизируй Марс!
-              Илон Маск
+             "Ни одна моя ракета еще не сделала удачную попытку, потому что в ней не было тебя!
+              Будь первым! Колонизируй Марс!"
+              &#169; Илон Маск
             </p>
             <img class="contacts__guarantees-image" src="images/mask-2.png" alt="Elon Musk picture">
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
   </main>
 
-  <!-- <footer class="footer">
+  <footer class="footer">
     <div class="container">
       <div class="footer__inner">
         <div class="footer__text">
@@ -502,7 +502,7 @@
         </ul>
       </div>
     </div>
-  </footer> -->
+  </footer>
 
 
   <script src="js/main.min.js"></script>
